--- a/_posts/2019-09-02-Poems.md
+++ b/_posts/2019-09-02-Poems.md
@@ -12,10 +12,4 @@ categories: adventure
 - 陶老师：你想想app显示的内容是从后台获取的。  
 - 我：所以，不对后台发送请求就不能得到response？  
 - 陶老师：是的，服务器一般不会主动发送。
-- 我：
-    哎，有点难过。  
-    好难哦，如果服务器不给我主动发送，我又怎么会知道。  
-    像爱情一样， 
-    是想触碰又缩回的手，  
-    我小心翼翼，多想伸出手摸摸他，  
-    可是又怕被拒绝。
+- 我：哎，有点难过。如果服务器不给我主动发送，我又怎么会知道。像爱一样，是想触碰又收回的手。
