--- a/_posts/2019-09-07-My-Gym.md
+++ b/_posts/2019-09-07-My-Gym.md
@@ -1,8 +1,20 @@
 ---
 layout: post
-title: "My Gym"
+title: "A Gift for Badminton Team"
 date: 2019-09-07 23:56:00
 categories: adventure
 ---
-### 一份给 RS 羽毛球队的小礼物
+### 抢场软件ฅʕ•̫͡•ʔฅ
+
+----------
+#### 一首服务器
+
+哈哈哈哈我觉得太中二了，还好这里没人💃
+
+刚刚在写一个抢羽毛球场地的脚本。已经模拟了正常的预定场地功能，思考如何实现准点抢时——  
+- 陶老师：你想想app显示的内容是从后台获取的。  
+- 我：所以，不对后台发送请求就不能得到response？  
+- 陶老师：是的，服务器一般不会主动发送。
+- 我：哎，有点难过（叹气    
+如果服务器不给我主动发送，我又怎么会知道。像爱一样，是想触碰又收回的手。
 
