--- a/_posts/2019-07-29-Hello-Vue.md
+++ b/_posts/2019-07-29-Hello-Vue.md
@@ -8,9 +8,11 @@ categories: Vue
 我觉得 ~~写bug~~ 敲代码好容易饿啊。  
 
 #### 2019.7.29 
-上完了前8课，陶老师说lecture9开始我就可以写小项目了，于是我觉得应该写一篇博客记录一下Vue的学习之路。然后就...没有然后了..
+上完了前8课，陶老师说 lecture9开始我就可以写小项目了，于是我觉得应该写一篇博客记录一下Vue的学习之路。然后就...没有然后了..
 
 #### 2019.8.1
-今天模仿vue的官方文档写了一点界面，感觉css还有好多不懂的东西，每次都在东拼西凑，直到效果满意。去github上逛了逛，发现有个vue一年学习之路的仓库，竟然有1.3k的⭐，看了看它写的笔记和思维导图，我觉得这⭐赚得有点太容易了吧Orz
+今天模仿 vue 的官方文档写了一点界面，感觉 css 还有好多不懂的东西，每次都在东拼西凑，直到效果满意。去 github 上逛了逛，发现有个 vue 一年学习之路的仓库，竟然有1.3k的⭐，看了看它写的笔记和思维导图，我觉得这⭐赚得有点太容易了吧Orz
 
+#### 2019.10.15
+用 vue 写的第一个小项目 [EasyPay](https://github.com/lsq210/EasyPay) 提交了。虽然和预期设想的差距有点大（也就是进步空间还很大！）。但还是很开心，希望四维图新好好对待它🙏
 
