--- a/_posts/2019-07-29-Hello-Vue.md
+++ b/_posts/2019-07-29-Hello-Vue.md
@@ -16,3 +16,5 @@ categories: Vue
 #### 2019.10.15
 用 vue 写的第一个小项目 [EasyPay](https://github.com/lsq210/EasyPay) 提交了。虽然和预期设想的差距有点大（也就是进步空间还很大！）。但还是很开心，希望四维图新好好对待它🙏
 
+#### 2019.10.29
+第1024次忘记`function`改`=>`,再对着`undefined`发呆超过5秒，我就是🐷
