--- a/_posts/2019-07-29-Hello-Vue.md
+++ b/_posts/2019-07-29-Hello-Vue.md
@@ -18,3 +18,6 @@ categories: Vue
 
 #### 2019.10.29
 第1024次忘记`function`改`=>`,再对着`undefined`发呆超过5秒，我就是🐷
+
+#### 2019.11.12
+第二个用 vue 写的项目 [Game of Thrones](https://github.com/lsq210/Game-of-Thrones) 初步完工🎉 非常非常开心当初自己选择了这个主题，将热爱的东西和专业课程结合，感觉很棒。 GIS 开发课上的最终展示也很不错， 权游模板的 PPT 实在是太美了！打开网页，权游的片头曲响起，太有感觉了😭
