--- a/_posts/2019-07-29-Hello-Vue.md
+++ b/_posts/2019-07-29-Hello-Vue.md
@@ -23,4 +23,6 @@ categories: Vue
 第二个用 vue 写的项目 [Game of Thrones](https://github.com/lsq210/Game-of-Thrones) 初步完工🎉 非常非常开心当初自己选择了这个主题，将热爱的东西和专业课程结合，感觉很棒。 GIS 开发课上的最终展示也很不错， 权游模板的 PPT 实在是太美了！打开网页，权游的片头曲响起，太有感觉了😭
 
 #### 2020.3.12
-写了一个多边形面积计算的作业，加入了地图。为了实现坐标和多边形显示的同步，当然是选择vue 啦！以及`mapbox-gl-draw` 太强大了，爱了爱了。
+写了一个多边形面积计算的作业，加入了地图。为了实现坐标和多边形显示的同步，当然是选择 vue 啦！以及`mapbox-gl-draw` 太强大了，爱了爱了。附上链接[area-calculation](https://github.com/lsq210/area-calculation)，想测哪里测哪里！
+#### 2020.6.16
+前几个月接触了 React，发现 React 生态圈确实强大( •̀ ω •́ )y 也尝试用 React 写了个[新冠可视化网页](https://github.com/lsq210/coronavirus-2019)，顺便交了作业嘿嘿。但是当期末大作业来时，需要合作开发，还是决定选用我更有经验且大家易上手的 Vue。然而太久没写，这套业务还是生疏了，好多地方需要查文档，查之前的项目，一边感慨之前为啥能写出这么优秀的代码哈哈哈哈。时间仓促，完成得不是很满意啦，放个项目前端地址[澳大利亚山火可视化与分析平台](https://github.com/FireboyWatergirls/Australia-wildfire-fe)
