--- a/_posts/2019-07-29-Travis.md
+++ b/_posts/2019-07-29-Travis.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Puzzlement about Travis"
+title: "Travis"
 date: 2019-07-29 23:33:27
 categories: Travis
 ---
-### 今日迷惑之travis
+### 今日迷惑
 
 激活的仓库为何消失?  
 下午从未失手的部署晚上为何频频失败?  
